# team.exiv2.org

./: README.html  archive.html  buildServer.html  changelog.html  conversion.html  download.html  examples.html  getting-started.html  index.html  iptc.html  makernote.html  manpage.html  metadata.html  rss.xml  sample.html  tags-canon.html  tags-casio.html  tags-fujifilm.html  tags-minolta.html  tags-nikon.html  tags-olympus.html  tags-panasonic.html  tags-pentax.html  tags-samsung.html  tags-sigma.html  tags-sony.html  tags-xmp-GPano.html  tags-xmp-MP.html  tags-xmp-MicrosoftPhoto.html  tags-xmp-acdsee.html  tags-xmp-aux.html  tags-xmp-crs.html  tags-xmp-crss.html  tags-xmp-dc.html  tags-xmp-dcterms.html  tags-xmp-digiKam.html  tags-xmp-dwc.html  tags-xmp-exif.html  tags-xmp-exifEX.html  tags-xmp-expressionmedia.html  (+20 more)
.github/workflows/: exiv2.org.yml
book/: CMakeLists.txt  IMaEA.css  IMaEA.md  args.cpp  book.graffle  create_tiff.cpp  dmpf.cpp  export.sh  io.cpp  parse.c  parse.cpp  tcp++.cpp  tvisitor.cpp  visitor.cpp
book/args/args.xcodeproj/: project.pbxproj
book/args/args.xcodeproj/xcuserdata/rmills.xcuserdatad/xcschemes/: xcschememanagement.plist
book/dmpf/dmpf.xcodeproj/: project.pbxproj
book/dmpf/dmpf.xcodeproj/xcuserdata/rmills.xcuserdatad/xcschemes/: xcschememanagement.plist
book/files/: 20200717_221452.avif  Photo:21-11-20.heic  Stonehenge.heic  Stonehenge.tiff  foo.csv  jxl.jxl
book/parse/parse/: main.cpp
book/parse/parse.xcodeproj/: project.pbxproj
book/parse/parse.xcodeproj/xcuserdata/rmills.xcuserdatad/xcschemes/: xcschememanagement.plist
book/test/: reveal.sh  run.sh  runall.sh
book/test/data/: 20200717_221452.avif  20200717_221452.dng  2021-02-13-1929.heic  CH0_0174.NEF  Canon.CR3  Canon.HIF  Canon.cr2  Canon.crw  DJI_0005.TIFF  DSC_0003.dng  IMG1.HEIC  IMGP6664.PEF  IMG_3578.HEIC  NEF.NEF  NikonD5300.dcp  ORF.ORF  PB180002.ORF  Photo-21-11-20.heic  Photo:21-11-20.heic  Reagan.jxl  Reagan2.jp2  Sony.HIF  SonyDSLR-A290AdobeStandard.dcp  Stonehenge.heic  Stonehenge.tiff  _DSC8827.ARW  args  avi.avi  avif.avif  avif_metadata2.avif  avif_with_metadata_exif_xmp.avif  cr3.cr3  csv  dmpf  exiv2-pr906.exv  heic.heic  mrw.mrw  sample1.raf
book/tvisitor/tvisitor/: main.cpp
book/tvisitor/tvisitor.xcodeproj/: project.pbxproj
book/tvisitor/tvisitor.xcodeproj/project.xcworkspace/: contents.xcworkspacedata
book/tvisitor/tvisitor.xcodeproj/project.xcworkspace/xcuserdata/rmills.xcuserdatad/: UserInterfaceState.xcuserstate
book/tvisitor/tvisitor.xcodeproj/xcshareddata/xcschemes/: tvisitor.xcscheme
book/tvisitor/tvisitor.xcodeproj/xcuserdata/rmills.xcuserdatad/xcschemes/: xcschememanagement.plist
book/visitor/visitor.xcodeproj/: project.pbxproj
book/visitor/visitor.xcodeproj/xcuserdata/rmills.xcuserdatad/xcschemes/: xcschememanagement.plist
book/xcode/xcode.xcodeproj/: project.pbxproj
book/xcode/xcode.xcodeproj/project.xcworkspace/xcuserdata/rmills.xcuserdatad/: UserInterfaceState.xcuserstate
book/xcode/xcode.xcodeproj/xcuserdata/rmills.xcuserdatad/xcschemes/: xcschememanagement.plist
contrib/buildserver/: ReadMe.txt  ball.sh  build.sh  categorize.py
contrib/redmine/: getdata.sh  progress.py
contrib/scripts/: del_rsrc
doc/: addmoddel_8cpp-example.html  annotated.html  asfvideo_8hpp.html  bmpimage_8hpp.html  classExiv2_1_1AnyError-members.html  classExiv2_1_1AnyError.html  classExiv2_1_1AsciiValue-members.html  classExiv2_1_1AsciiValue.html  classExiv2_1_1AsfVideo-members.html  classExiv2_1_1AsfVideo.html  classExiv2_1_1BasicError-members.html  classExiv2_1_1BasicError.html  classExiv2_1_1BasicIo-members.html  classExiv2_1_1BasicIo.html  classExiv2_1_1BmffImage-members.html  classExiv2_1_1BmffImage.html  classExiv2_1_1BmpImage-members.html  classExiv2_1_1BmpImage.html  classExiv2_1_1CommentValue-members.html  classExiv2_1_1CommentValue.html  classExiv2_1_1CommentValue_1_1CharsetInfo-members.html  classExiv2_1_1CommentValue_1_1CharsetInfo.html  classExiv2_1_1Cr2Image-members.html  classExiv2_1_1Cr2Image.html  classExiv2_1_1Cr2Parser-members.html  classExiv2_1_1Cr2Parser.html  classExiv2_1_1CrwImage-members.html  classExiv2_1_1CrwImage.html  classExiv2_1_1CrwParser-members.html  classExiv2_1_1CrwParser.html  classExiv2_1_1DataBuf-members.html  classExiv2_1_1DataBuf.html  classExiv2_1_1DataValue-members.html  classExiv2_1_1DataValue.html  classExiv2_1_1DateValue-members.html  classExiv2_1_1DateValue.html  classExiv2_1_1EpsImage-members.html  classExiv2_1_1EpsImage.html  classExiv2_1_1ExifData-members.html  classExiv2_1_1ExifData.html  (+246 more)
license/: ReadMe.txt
logo_files/: Logo.graffle
meetings/: Exiv2-v0.24.1.pptx
rmills/graphics/: wiki.graffle
website/: Checklist.txt  Makefile
website/doxygen/: Doxyfile  Doxyfile.patch  Doxyfile.v27  mainpage.hpp.in
website/html/: PreRelease.graffle  manpage-v27.html
website/html/include/: exiv2.css
website/master/: archive.html.in  download.html.in  getting-started.html.in  index.html.in  makernote.html.in  news.xml  whatsnew.html.in
website/var/: Canon.xml  CanonCf.xml  CanonCs.xml  CanonFi.xml  CanonPa.xml  CanonPi.xml  CanonSi.xml  Casio.xml  Casio2.xml  Exif.xml  Fujifilm.xml  Iptc.xml  MinoltaCs5D.xml  MinoltaCs7D.xml  MinoltaCsNew.xml  Nikon1.xml  Nikon2.xml  Nikon3.xml  NikonAFT.xml  NikonAf.xml  NikonAf2.xml  NikonCb1.xml  NikonCb2.xml  NikonCb2a.xml  NikonCb2b.xml  NikonCb3.xml  NikonCb4.xml  NikonFi.xml  NikonFl1.xml  NikonFl2.xml  NikonFl3.xml  NikonIi.xml  NikonLd1.xml  NikonLd2.xml  NikonLd3.xml  NikonMe.xml  NikonPc.xml  NikonSi01xx.xml  NikonSiD300a.xml  NikonSiD300b.xml  (+68 more)
